Fix the spacing of navbar.

--- a/baseframe/static/css/mui.css
+++ b/baseframe/static/css/mui.css
@@ -3376,7 +3376,7 @@ h4, h5, h6 {
 .header__nav--custom {
   min-height: 40px;
   height: 40px;
-  margin-top: 7px;
+  margin-top: 10px;
 }
 
 .header__app-icon {
