--- a/baseframe/static/sass/baseframe-material/_menu.scss
+++ b/baseframe/static/sass/baseframe-material/_menu.scss
@@ -20,7 +20,7 @@
 .header__nav--custom {
     min-height: 40px;
     height: 40px;
-    margin-top: 7px;
+    margin-top: 10px;
 }
 
 .header__app-icon {
